<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserLogin"
        android:background="@color/white">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_login"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="Email"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/password"
            android:layout_marginTop="150dp">
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="Password"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            android:layout_marginTop="20dp">
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/Login"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_google"
            android:layout_marginTop="10dp"
            android:background="@drawable/edge4"/>

        <TextView
            android:id="@+id/find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find Password"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/sign_up"
            android:layout_marginTop="10dp">
        </TextView>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            app:layout_constraintTop_toTopOf="@+id/find_pwd"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toRightOf="@+id/find_pwd"
            app:layout_constraintRight_toRightOf="parent"
            android:clickable="true"
            android:onClick="signUp">
        </TextView>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/Google_login"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="60dp"
            android:background="@drawable/edge3"/>

        <Button
            android:id="@+id/btn_kakao"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/Kakao_login"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/btn_google"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/kakao"
            android:layout_marginTop="15dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>